# cmake-circleci

./: .gitignore  CMakeLists.txt  main.cpp
.circleci/: config.yml
